--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button id="compute" onclick="compute()">Calculate Interest</button> <br>
                 <span id="result">
                 </span>
-                <footer>&#169; This Calculator belongs to Devon.</footer>
+                <footer>&#169; Everyone can get rich</footer>
             </div>
 
             
